# fntcommand-restclient

./: README.md  pyproject.toml  requirements.txt
fnt/: __init__.py  __main__.py  cli.py
